added auth functionality, upgraded to OpenApi 3.0
