# docs/api.yml
@@ -1,143 +1,155 @@
-swagger: '2.0'
+openapi: 3.0.0
 info:
   title: user service api
   description: Api for user management and authentication
   version: '0.0.1'
-host:
-basePath: '/'
+servers:
+- url: https://127.0.0.1:8443/
+  description: 'Development docker-compose'
 tags:
 - name: user
   description: Operations directly related to users
 - name: authentication
   description: Everything related to authentication
-schemes:
-- "https"
 paths:
   /user:
     post:
       tags:
-        - user
-      consumes:
-      - application/json
-      produces:
-      - application/json
-      parameters:
-      - in: body
-        name: body
-        description: The user to create
+      - user
+      requestBody:
         required: true
-        schema:
-          $ref: '#/definitions/User'
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/User'
       responses:
         200:
           description: OK
-          schema:
-            $ref: '#/definitions/User'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
   /user/{user-id}:
     get:
       tags:
-        - user
-      produces:
-      - application/json
+      - user
       parameters:
-      - $ref: '#/parameters/user-id'
+      - $ref: '#/components/parameters/user-id'
       responses:
         200:
           description: OK
-          schema:
-            $ref: '#/definitions/User'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
     put:
       tags:
-        - user
-      consumes:
-      - application/json
-      produces:
-      - application/json
+      - user
       parameters:
-      - $ref: '#/parameters/user-id'
-      - in: body
-        name: body
-        description: The user to update
+      - $ref: '#/components/parameters/user-id'
+      requestBody:
         required: true
-        schema:
-          $ref: '#/definitions/User'
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/User'
       responses:
         200:
           description: OK
-          schema:
-            $ref: '#/definitions/User'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
     delete:
       tags:
         - user
-      produces:
-      - application/json
       parameters:
-      - $ref: '#/parameters/user-id'
+      - $ref: '#/components/parameters/user-id'
       responses:
         200:
           description: OK
   /authentication:
     post:
       tags:
-        - authentication
-      consumes:
-      - application/json
-      produces:
-      - application/json
-      parameters:
-      - in: body
-        name: body
-        description: The user to update
+      - authentication
+      requestBody:
         required: true
-        schema:
-          $ref: '#/definitions/Login'
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Login'
       responses:
         200:
           description: OK
     delete:
       tags:
-        - authentication
-      consumes:
-      - application/json
-      produces:
-      - application/json
+      - authentication
       responses:
         200:
           description: OK
-parameters:
-  user-id:
-    in: path
-    name: user-id
-    description: Id of the user
-    required: true
-    type: string
-definitions:
-  Login:
-    type: object
-    properties:
-      user:
+  /authentication/{token}:
+    get:
+      tags:
+        - authentication
+      parameters:
+      - $ref: '#/components/parameters/token'
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+components:
+  parameters:
+    user-id:
+      in: path
+      name: user-id
+      description: Id of the user
+      required: true
+      schema:
         type: string
-        example: User123|user123@mail.com
-      password:
+        example: 45497
+    token:
+      in: path
+      name: token
+      description: Identifier token
+      required: true
+      schema:
         type: string
-        example: password123
-  User:
-    type: object
-    properties:
-      user:
-        type: string
-        example: User123
-      email:
-        type: string
-        example: user123@mail.com
-      password:
-        $ref: '#/definitions/Login/properties/password'
-      first-name:
-        type: string
-        example: Luke
-      last-name:
-        type: string
-        example: Skywalker
-      birthday:
-        type: string
-        example: '1990-12-31'
+        example: ag983j49a8jgf9erjg9e485
+  schemas:
+    Login:
+      type: object
+      properties:
+        user:
+          type: string
+          example: User123|user123@mail.com
+        password:
+          $ref: '#/components/schemas/User/properties/password'
+    User:
+      type: object
+      properties:
+        id:
+          type: string
+          readOnly: true
+          example: 45497
+        user:
+          type: string
+          example: User123
+        email:
+          type: string
+          example: user123@mail.com
+        password:
+          type: string
+          writeOnly: true
+          example: password123
+        first-name:
+          type: string
+          example: Luke
+        last-name:
+          type: string
+          example: Skywalker
+        birthday:
+          type: string
+          example: '1990-12-31'
